--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "private": true,
   "devDependencies": {
-    "@nrwl/cli": "14.7.5",
+    "@nrwl/cli": "^15.9.7",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.7.5",
+    "@nrwl/workspace": "^19.3.2",
     "@nxrocks/nx-flutter": "^4.0.2",
-    "nx": "14.7.5",
+    "nx": "^19.3.2",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
   }
